...
            "value" : "New password"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Новый пароль"
          }
        }
      }
    },
    "auth.noAccount" : {
      "localizations" : {
...
